PR to elevate webclients to top level menu in openfire admin UI

--- a/src/i18n/inverse_i18n.properties
+++ b/src/i18n/inverse_i18n.properties
@@ -1,5 +1,7 @@
 admin.sidebar.webclients.name=Web Clients
 admin.sidebar.webclients.description=Manage Web Clients
+admin.sidebar.webclients.item.settings.name=Settings
+admin.sidebar.webclients.item.settings.description=Web Client Settings/Configuration
 admin.sidebar.webclients.item.inverse.name=inVerse
 admin.sidebar.webclients.item.inverse.description=Manage inVerse Webchat
 
