OF-1473: Update inVerse to version 3.3.2 (#1006)

--- a/src/i18n/inverse_i18n.properties
+++ b/src/i18n/inverse_i18n.properties
@@ -37,3 +37,9 @@ config.page.locked_domain.description=When enabled, users from domains other tha
 
 config.page.language.header=inVerse Language
 config.page.language.description=The selection made here affects the language of the inVerse user interface.
+
+config.page.view_mode.label=View Mode
+config.page.view_mode.description=Defines the layout of the user interface.
+config.page.view_mode.overlayed.label=Overlayed
+config.page.view_mode.fullscreen.label=Full Screen
+config.page.view_mode.mobile.label=Mobile
