--- a/src/i18n/inverse_i18n.properties
+++ b/src/i18n/inverse_i18n.properties
@@ -34,6 +34,8 @@ config.page.default_domain.description=Specify a domain to act as the default fo
 config.page.default_domain.label=Default Domain
 config.page.locked_domain.label=Locked Domain
 config.page.locked_domain.description=When enabled, users from domains other than the one specified cannot use the client.
+config.page.play_sounds.label=Play Sounds
+config.page.play_sounds.description=Plays a notification sound when a user receives a personal message or when its nickname is mentioned in a chatroom.
 
 config.page.language.header=inVerse Language
 config.page.language.description=The selection made here affects the language of the inVerse user interface.
