#24 change the debug configuration option with loglevel

--- a/src/i18n/inverse_i18n.properties
+++ b/src/i18n/inverse_i18n.properties
@@ -17,12 +17,18 @@ config.page.description=This page allows you to configure the inVerse web chat a
 config.page.link.unsecure=End-users can use inVerse (using an unencrypted HTTP connection) by opening the following address in a browser: <a href="{0}">{0}</a>.
 config.page.link.secure=inVerse is available via an encrypted HTTPS address at: <a href="{0}">{0}</a>.
 
-config.page.debug.header=Webclient Debug Setting
-config.page.debug.description=If set to true, debugging output will be logged to the browser console.
-config.page.debug.enabled=Enabled
-config.page.debug.enabled_info=Debug information will be printed to the Javascript console of the client browser.
-config.page.debug.disabled=Disabled
-config.page.debug.disabled_info=Client-sided debug information will not be generated.
+config.page.loglevel.header=Webclient LogLevel Setting
+config.page.loglevel.description=If set to debug, debugging output will be logged to the browser console.
+config.page.loglevel.info=Info
+config.page.loglevel.info_info=Info information will be printed to the Javascript console of the client browser.
+config.page.loglevel.debug=Debug
+config.page.loglevel.debug_info=Debug information will be printed to the Javascript console of the client browser.
+config.page.loglevel.warn=Warning
+config.page.loglevel.warn_info=Warning information will be printed to the Javascript console of the client browser.
+config.page.loglevel.error=Error
+config.page.loglevel.error_info=Error information will be printed to the Javascript console of the client browser.
+config.page.loglevel.fatal=Fatal
+config.page.loglevel.fatal_info=Fatal information will be printed to the Javascript console of the client browser.
 
 config.page.general.header=Web Client Settings
 config.page.general.description=Use this form to apply configuration changes to the inVerse web client.
