--- a/src/i18n/inverse_i18n_ru_RU.properties
+++ b/src/i18n/inverse_i18n_ru_RU.properties
@@ -15,12 +15,18 @@ config.page.title=Конфигурация веб-клиента inVerse
 config.page.description=На этой странице вы можете настроить приложение inVerse для веб-чата.
 config.page.link.unsecure=Конечные пользователи могут использовать inVerse (используя незашифрованное HTTP-соединение), открыв в браузере следующий адрес: <a href="{0}">{0}</a>.
 config.page.link.secure=inVerse доступен через зашифрованный адрес HTTPS по адресу: <a href="{0}">{0}</a>.
-config.page.debug.header=Настройка отладки веб-клиента
-config.page.debug.description=Если выбрано значение "Включить", вывод отладки будет записан в консоль браузера.
-config.page.debug.enabled=Включить
-config.page.debug.enabled_info=Отладочная информация будет напечатана в консоли JavaScript в браузере клиента.
-config.page.debug.disabled=Отключить
-config.page.debug.disabled_info=Информация об отладочной стороне клиента не будет сгенерирована.
+config.page.loglevel.header=Webclient LogLevel Setting
+config.page.loglevel.description=If set to debug, debugging output will be logged to the browser console.
+config.page.loglevel.info=Info
+config.page.loglevel.info_info=Info information will be printed to the Javascript console of the client browser.
+config.page.loglevel.debug=Debug
+config.page.loglevel.debug_info=Debug information will be printed to the Javascript console of the client browser.
+config.page.loglevel.warn=Warning
+config.page.loglevel.warn_info=Warning information will be printed to the Javascript console of the client browser.
+config.page.loglevel.error=Error
+config.page.loglevel.error_info=Error information will be printed to the Javascript console of the client browser.
+config.page.loglevel.fatal=Fatal
+config.page.loglevel.fatal_info=Fatal information will be printed to the Javascript console of the client browser.
 config.page.general.header=Настройки веб-клиента
 config.page.general.description=Используйте эту форму, чтобы применить изменения конфигурации к веб-клиенту inVerse.
 config.page.default_domain.description=Укажите домен, который будет использоваться по умолчанию для JID пользователей. Это позволит пользователям регистрироваться только с частью имени пользователя JID, а не с полным JID. Например, если <tt>домен по умолчанию</tt> является <tt>example.org</tt>, пользователь: <tt>johnny@example.org</tt> может войти всего лишь с помощью <tt>johnny</tt>. JID с другими доменами все еще разрешены, но их необходимо предоставить в полном объеме. Чтобы указать только один домен и запретить другие домены, см. параметр <em>Блокировака домена</ em>.
